--- a/getting-started/validation-troubleshooting/validation-steps.mdx
+++ b/getting-started/validation-troubleshooting/validation-steps.mdx
@@ -1,195 +1,150 @@
 ---
-title: "Quick Validation Checklist"
-description: "A concise list of checks and commands to confirm your installation and configuration are working. Use this to catch common misconfigurations immediately after setup."
+title: "Verifying Your Installation"
+description: "Present easy steps to validate your GoogleTest and GoogleMock installation, including expected output from running the example tests."
 ---
 
-# Quick Validation Checklist
+# Verifying Your Installation
 
-Ensure your GoogleTest and GoogleMock installation works perfectly by running through these crucial checks immediately after setup. This checklist helps catch common misconfigurations and confirm that your development environment is correctly configured.
+This guide walks you through validating your GoogleTest and GoogleMock setup to ensure everything is correctly installed and working as expected. You'll run example tests that confirm both libraries function properly, observing the expected output and learning how to interpret results.
 
 ---
 
-## 1. Verify Installation and Version
+## 1. Prerequisites and Preparation
 
-1. Open a terminal or command prompt.
-2. Confirm that the GoogleTest and GoogleMock headers are accessible. For example, confirm you can locate `gtest/gtest.h` and `gmock/gmock.h` in your include path.
-3. Check the version of GoogleTest and GoogleMock installed by inspecting your package manager or the source repository version.
+Before verifying your installation, make sure:
+
+- You have followed the installation instructions for GoogleTest and GoogleMock, including building or integrating the libraries into your project.
+- Your build environment includes the necessary compiler and linker flags to incorporate GoogleTest and GoogleMock headers and libraries.
+- Your test executable is correctly linked against both GoogleTest (`gtest`) and GoogleMock (`gmock`) libraries.
 
 
-## 2. Build a Simple Test Program
+## 2. Running the Example Tests
 
-Create a minimal test source file `simple_test.cc` to verify that everything compiles and runs:
+GoogleTest and GoogleMock come with example test files that verify core functionality. Running these tests is the most straightforward method to check your installation.
 
-```cpp
-#include <gtest/gtest.h>
+### Step 1: Build the Tests
 
-TEST(SimpleTest, BasicAssertions) {
-  EXPECT_EQ(1, 1);
-  EXPECT_TRUE(true);
-}
+If you cloned the repository and built GoogleTest and GoogleMock, example tests are usually built alongside. Otherwise, compile the example test source files manually, making sure to include the correct include directories and link against the correct GoogleTest and GoogleMock libraries.
 
-int main(int argc, char** argv) {
-  ::testing::InitGoogleTest(&argc, argv);
-  return RUN_ALL_TESTS();
-}
-```
-
-### Build Command Example
-
-On Linux/macOS with g++:
+For instance, compile on a Unix-like system with:
 
 ```bash
-g++ -std=c++11 simple_test.cc -lgtest -lgtest_main -pthread -o simple_test
+# Replace paths with your local installation paths
+c++ -std=c++11 -isystem path/to/googletest/include \
+    -Ipath/to/googlemock/include \
+    path/to/gtest/libgtest.a path/to/gmock/libgmock.a \
+    example_test.cc -pthread -o example_test
 ```
 
-Or with Bazel or CMake, refer to your build integration guide.
+### Step 2: Execute the Test Binary
 
-
-## 3. Run the Simple Test
-
-Run the compiled executable:
+Run the tests via the command line:
 
 ```bash
-./simple_test
+./example_test
 ```
 
-Expected output snippet:
+### Expected Output
 
-```
-[==========] Running 1 test from 1 test suite.
+Upon running, you should see output similar to:
+
+```plain
+[==========] Running N tests from M test suites.
 [----------] Global test environment set-up.
-[----------] 1 test from SimpleTest
-[ RUN      ] SimpleTest.BasicAssertions
-[       OK ] SimpleTest.BasicAssertions (0 ms)
-[----------] 1 test from SimpleTest (0 ms total)
-
+[----------] X tests from FooTest
+[ RUN      ] FooTest.Bar
+[       OK ] FooTest.Bar
+...
 [----------] Global test environment tear-down
-[==========] 1 test from 1 test suite ran. (0 ms total)
-[  PASSED  ] 1 test.
+[==========] N tests from M test suites ran. (some ms total)
+[  PASSED  ] N tests.
 ```
 
-If the test runs and passes, your installation and linkage are confirmed correct.
+Where `N` and `M` are the number of tests and test suites.
 
+This indicates that both GoogleTest and GoogleMock are functioning correctly.
 
-## 4. Validate GoogleMock Functionality
+## 3. Running a Simple Test with GoogleMock
 
-Create a simple mock example to ensure GoogleMock is working.
+To specifically validate GoogleMock, you can write and run a minimal test using a mock class:
 
-### Mock Class Definition
+### Example Mock Class
 
 ```cpp
 #include <gmock/gmock.h>
-#include <gtest/gtest.h>
 
-class MockFoo {
+// An example interface to mock
+class Foo {
  public:
-  MOCK_METHOD(int, Bar, (int n), ());
+  virtual ~Foo() = default;
+  virtual int GetValue(int x) = 0;
+};
+
+// Mock class
+class MockFoo : public Foo {
+ public:
+  MOCK_METHOD(int, GetValue, (int x), (override));
 };
 ```
 
-### Test with Expectation Example
+### Example Test
 
 ```cpp
-TEST(MockTest, BarReturnsValue) {
-  MockFoo foo;
-  EXPECT_CALL(foo, Bar(5))
-      .WillOnce(::testing::Return(10));
+#include <gtest/gtest.h>
+#include <gmock/gmock.h>
 
-  EXPECT_EQ(foo.Bar(5), 10);
-}
+using ::testing::Return;
 
-int main(int argc, char** argv) {
-  ::testing::InitGoogleMock(&argc, argv);
-  return RUN_ALL_TESTS();
+TEST(MockExampleTest, BasicExpectCall) {
+  MockFoo mock;
+  EXPECT_CALL(mock, GetValue(5))
+      .WillOnce(Return(10));
+
+  int result = mock.GetValue(5);
+  EXPECT_EQ(result, 10);
 }
 ```
 
-### Build and Run
+### Running this test
 
-Compile and run similarly to the simple test. Confirm this test passes to verify gMock works.
+1. Compile the test with GoogleTest and GoogleMock linked.
+2. Run the test executable.
+3. You should see the test pass successfully.
 
+## 4. Understanding Test Results
 
-## 5. Check Core GoogleTest Flags
+- **Pass**: Your output will show all tests running and passing, confirming a healthy installation.
+- **Fail/Warning**: Failure indicates a problem with your build, linking, or runtime environment. The output will contain detailed messages about what failed.
+- **No Test Found or Linker Errors**: Indicates problems linking or missing files. Make sure your compile and link commands include all needed inputs.
 
-Run your test executables with the `--help` flag and confirm GoogleTest options display correctly:
+## 5. Troubleshooting Tips
 
-```bash
-./simple_test --help
-```
+- Ensure all dependencies such as pthreads are linked.
+- Confirm the correct header include paths and library link paths.
+- Use verbose test output by running your tests with `--gtest_verbose=info` to get detailed logs of mock interactions.
+- If you see linkage errors, verify library paths and names.
+- On Windows, ensure the runtime libraries for GoogleTest and GoogleMock match those used in your build.
 
-Look for a list of flags like `--gtest_filter`, `--gtest_repeat`, `--gtest_shuffle`, etc.
+## 6. Next Steps
 
+- After successful test runs, explore writing your own tests using [GoogleTest Primer](https://google.github.io/googletest/primer.html).
+- Learn mocking techniques and expectations from the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html).
+- Use the [Assertions Reference](reference/assertions.md) to leverage powerful validation features.
+- Integrate tests into your build and continuous integration process for full test automation.
 
-## 6. Run Tests with Common Flags
+---
 
-Try running your tests with these flags to confirm functionality:
+## Additional Resources
 
-- Run only a subset of tests:
-
-  ```bash
-  ./simple_test --gtest_filter=SimpleTest.*
-  ```
-
-- Repeat tests:
-
-  ```bash
-  ./simple_test --gtest_repeat=3
-  ```
-
-- Request colored output:
-
-  ```bash
-  ./simple_test --gtest_color=yes
-  ```
-
-Confirm tests run as expected with these options, outputting colors or filtering tests.
-
-
-## 7. Validate Assertion Macros
-
-Write and run tests covering several assertion types including:
-- `EXPECT_EQ` and `ASSERT_EQ`
-- `EXPECT_TRUE` and `ASSERT_TRUE`
-- `EXPECT_THROW` and `ASSERT_THROW` (if exceptions enabled)
-- `EXPECT_DEATH` (for death tests, if applicable)
-
-Verify that tests fail when expected and pass otherwise.
-
-
-## 8. Validate Test Fixture Behavior
-
-Create a test fixture class and tests using `TEST_F` to ensure fixture lifecycle works. Confirm `SetUp`, `TearDown`, `SetUpTestSuite`, and `TearDownTestSuite` are called correctly.
-
-
-## 9. Check GoogleTest and GoogleMock Integration
-
-Ensure you can link both frameworks together and write mock-based tests that run assertions using GoogleTest macros.
-
-
-## 10. Inspect Test Output Files (Optional)
-
-If you enabled XML or JSON output with `--gtest_output=xml:output.xml` or `json:output.json`, verify these files are created with meaningful test reports.
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html) — Learn the basics of writing tests
+- [GoogleMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Recipes for advanced mocking
+- [Assertions Reference](reference/assertions.md) — Details on assertion macros
+- [Mocking Reference](docs/reference/mocking.md) — Comprehensive mocking API
+- [Troubleshooting Common Setup Issues](getting-started/validation-troubleshooting/common-issues) — Resolving setup problems
 
 
 ---
 
-## Troubleshooting Tips
+This validation ensures you have a solid foundation to start writing robust tests with GoogleTest and GoogleMock.
 
-- If tests fail to compile, verify your compiler version and C++ standard.
-- If you get linker errors, ensure you link `-lgtest`, `-lgtest_main` and `-lgmock` correctly.
-- If tests hang on launch, check thread creation or death test styles.
-- Confirm environment variables like `GTEST_COLOR` and flags like `--gtest_filter` are passed properly.
 
----
-
-## References
-
-- [GoogleTest Primer](../primer.md) for quickstart and test writing
-- [Assertions Reference](../reference/assertions.md) for all assertions
-- [gMock Cookbook](../gmock_cook_book.md) for mock definitions and usage
-- [Setup and Project Integration](../configuration-first-run/configuration-setup.md)
-- [Installation on Different Platforms](../prerequisites-installation/installation-methods.md)
-
----
-
-By confirming these checks, you ensure your test environment is robust, ready to build reliable C++ tests using GoogleTest and GoogleMock.
