--- a/guides/getting-started/first-tests.mdx
+++ b/guides/getting-started/first-tests.mdx
@@ -1,62 +1,58 @@
 ---
-title: "Writing Your First Tests"
-description: "Create, run, and interpret your first unit tests using GoogleTest. Introduces the basic structure of tests, assertion macros, and test execution, with sample code for common scenarios."
+title: "Writing and Running Your First Tests"
+description: "Learn the fundamentals of writing, organizing, and executing unit tests using GoogleTest. Covers defining test cases, using test macros, and running tests from the command line. Illustrates basic assertions with practical examples."
 ---
 
-# Writing Your First Tests
+# Writing and Running Your First Tests
 
-Create, run, and interpret your first unit tests using GoogleTest. This guide introduces the basic structure of tests, assertion macros, and test execution, with sample code for common scenarios.
+## Overview
 
----
-
-## 1. Workflow Overview
-
-### What This Guide Helps You Accomplish
-This guide shows you how to write your first simple unit tests using GoogleTest (gtest), enabling you to verify your C++ code's correctness through automated tests.
-
-### Prerequisites
-- You have GoogleTest properly installed and configured in your project.
-- Ability to compile and run C++ code.
-- Basic familiarity with C++ syntax.
-
-### What You'll Achieve
-- Understand the structure of a GoogleTest test case.
-- Write tests that use assertion macros.
-- Build and run tests and interpret their results.
-
-### Approximate Time Commitment
-15-30 minutes
-
-### Difficulty Level
-Beginner
+This guide introduces you to the fundamentals of writing, organizing, and executing your initial unit tests using GoogleTest. You will learn how to define test cases with the TEST and TEST_F macros, perform basic assertions, compile your tests, and run them from the command line. Practical examples illustrate how GoogleTest output helps diagnose issues promptly.
 
 ---
 
-## 2. Step-by-Step Instructions
+## Prerequisites
 
-### Step 1: Include the GoogleTest Header
+Before you begin, ensure you have:
 
-Start by including the main GoogleTest header in your test source file.
+- Installed GoogleTest properly in your development environment. Refer to the [Installation and Setup](../getting-started/prerequisites-installation/installation-cmake.md) guide for CMake or Bazel-based projects.
+- Basic knowledge of C++ programming and compiling C++ code.
+- A C++ compiler compatible with C++17 standard or later.
+- Your build environment configured to link against GoogleTest libraries.
+
+
+## Expected Outcome
+
+By completing this guide, you will:
+
+- Know how to write simple tests using the `TEST` and `TEST_F` macros.
+- Understand the difference between simple tests and fixture-based tests.
+- Be able to compile and run your test programs.
+- Interpret the test results output by GoogleTest.
+- Recognize common assertion macros to validate conditions.
+
+---
+
+## Step-by-Step Instructions
+
+### 1. Creating a Simple Test
+
+Start by writing a basic test without shared test fixtures.
 
 ```cpp
 #include <gtest/gtest.h>
-```
 
-### Step 2: Define a Simple Test Using the `TEST` Macro
-
-Use the `TEST(TestSuiteName, TestName)` macro to define a test. The test name and suite name can be any valid C++ identifiers.
-
-Example testing a simple function:
-
-```cpp
+// A simple function to test
 int Factorial(int n) {
-  return n <= 1 ? 1 : n * Factorial(n - 1);
+  return (n <= 1) ? 1 : n * Factorial(n - 1);
 }
 
+// Define a test named HandlesZeroInput in the FactorialTest suite
 TEST(FactorialTest, HandlesZeroInput) {
   EXPECT_EQ(Factorial(0), 1);
 }
 
+// Another test for positive inputs
 TEST(FactorialTest, HandlesPositiveInput) {
   EXPECT_EQ(Factorial(1), 1);
   EXPECT_EQ(Factorial(2), 2);
@@ -65,104 +61,146 @@ TEST(FactorialTest, HandlesPositiveInput) {
 }
 ```
 
-#### Notes:
-- `TEST` defines a test function that GoogleTest will discover and run automatically.
-- Tests are grouped in suites (`FactorialTest` above).
-- Use assertion macros like `EXPECT_EQ` to verify conditions.
-- Assertion failures in a test mark it as failed but do not abort the test (unless using `ASSERT_*` macros).
+- **What happens?**
+  - You declare related tests grouped by the test suite name (`FactorialTest`).
+  - Each test checks expected values using the `EXPECT_EQ` assertion macro.
 
-### Step 3: Build Your Test Executable
+### 2. Writing Tests with Fixtures
 
-Compile your test code linking against the GoogleTest framework. For example, using `g++`:
-
-```bash
-g++ -std=c++17 -isystem /path/to/googletest/include -pthread \
-    my_test.cc /path/to/libgtest.a /path/to/libgtest_main.a \
-    -o my_test
-```
-
-or with CMake integration, configure accordingly based on your build system.
-
-### Step 4: Run Your Tests
-
-Execute the compiled test binary:
-
-```bash
-./my_test
-```
-
-Expected output will show which tests pass or fail. For example:
-
-```
-[ RUN      ] FactorialTest.HandlesZeroInput
-[       OK ] FactorialTest.HandlesZeroInput
-[ RUN      ] FactorialTest.HandlesPositiveInput
-[       OK ] FactorialTest.HandlesPositiveInput
-[----------] 2 tests from FactorialTest
-[==========] 2 tests ran.
-[  PASSED  ] 2 tests.
-```
-
-### Step 5: Interpret Test Results
-
-- **OK** status means the test passed.
-- Failed tests will show assertion failures with file and line number.
-- Use this information to troubleshoot and fix bugs in your implementation.
-
----
-
-## 3. Detailed Explanation of Basic Test Components
-
-### TEST Macro
-
-- Defines a named test.
-- Test suite name groups related tests.
-- Test names should be descriptive & unique within a suite.
-
-### Assertion Macros
-
-GoogleTest provides macros like `EXPECT_*` and `ASSERT_*`:
-
-| Macro         | Behavior                      | Use Case                                      |
-|---------------|-------------------------------|-----------------------------------------------|
-| `EXPECT_EQ`   | Checks equality, nonfatal failure | Test continues even if assertion fails       |
-| `ASSERT_EQ`   | Checks equality, fatal failure    | Use when failure should prevent further test |
-| `EXPECT_TRUE` | Checks boolean true condition     | General condition checks                      |
-| `ASSERT_FALSE`| Checks boolean false condition    | Critical boolean checks                        |
-
-### Difference between `EXPECT_*` and `ASSERT_*`
-- `EXPECT_*` lets the test continue after failure, useful for multiple checks in one test.
-- `ASSERT_*` aborts the current test function on failure, for necessary preconditions.
-
-### Test Fixture (Optional for Reuse)
-
-For multiple tests sharing setup, use test fixtures with `TEST_F`:
+For tests that share common setup or data, create a fixture class by deriving from `testing::Test`.
 
 ```cpp
-class MyTestFixture : public ::testing::Test {
+class QueueTest : public testing::Test {
  protected:
-  void SetUp() override {
-    // Initialization before each test
+  QueueTest() {
+     // Initialize queues
+     q0_.clear();
+     q1_.enqueue(1);
+     q2_.enqueue(2);
+     q2_.enqueue(3);
   }
 
-  void TearDown() override {
-    // Cleanup after each test
-  }
-
-  int shared_data_;
+  Queue<int> q0_;
+  Queue<int> q1_;
+  Queue<int> q2_;
 };
 
-TEST_F(MyTestFixture, Test1) {
-  shared_data_ = 42;
-  EXPECT_EQ(shared_data_, 42);
+TEST_F(QueueTest, IsEmptyInitially) {
+  EXPECT_EQ(q0_.size(), 0);
+}
+
+TEST_F(QueueTest, DequeueWorks) {
+  int* n = q0_.dequeue();
+  EXPECT_EQ(n, nullptr);
+
+  n = q1_.dequeue();
+  ASSERT_NE(n, nullptr);
+  EXPECT_EQ(*n, 1);
+  delete n;
+
+  n = q2_.dequeue();
+  ASSERT_NE(n, nullptr);
+  EXPECT_EQ(*n, 2);
+  delete n;
 }
 ```
 
+- `TEST_F` uses the fixture `QueueTest` to access shared setup.
+- Each test runs with a fresh fixture instance (isolated tests).
+
+### 3. Compiling Your Tests
+
+Compile your test code and link it against GoogleTest libraries. Here is how you can do it on the command line with `g++` assuming GoogleTest is installed:
+
+```bash
+# Compile
+ g++ -std=c++17 -isystem /usr/local/include -pthread \
+     my_tests.cc -L/usr/local/lib -lgtest -lgtest_main -o my_tests
+
+# Run the tests
+ ./my_tests
+```
+
+For CMake projects, set up your `CMakeLists.txt` to include GoogleTest. Example:
+
+```cmake
+find_package(GTest REQUIRED)
+include_directories(${GTEST_INCLUDE_DIRS})
+add_executable(my_tests my_tests.cc)
+target_link_libraries(my_tests ${GTEST_LIBRARIES} pthread)
+```
+
+
+### 4. Running Your Tests
+
+When you run the test executable, GoogleTest:
+- Automatically discovers all tests registered via TEST/TEST_F.
+- Runs each test independently.
+- Prints detailed output indicating which tests passed or failed.
+
+Example output:
+
+```none
+[==========] Running 2 tests from 1 test suite.
+[----------] Global test environment set-up.
+[----------] 2 tests from FactorialTest
+[ RUN      ] FactorialTest.HandlesZeroInput
+[       OK ] FactorialTest.HandlesZeroInput (0 ms)
+[ RUN      ] FactorialTest.HandlesPositiveInput
+[       OK ] FactorialTest.HandlesPositiveInput (0 ms)
+[----------] 2 tests from FactorialTest (0 ms total)
+[----------] Global test environment tear-down
+[==========] 2 tests from 1 test suite ran. (0 ms total)
+[  PASSED  ] 2 tests.
+```
+
+### 5. Common Assertions and Their Usage
+
+- `EXPECT_EQ(val1, val2)`: Tests if val1 == val2 (non-fatal failure).
+- `ASSERT_EQ(val1, val2)`: Tests if val1 == val2 (fatal failure, aborts current function).
+- `EXPECT_TRUE(condition)`, `ASSERT_TRUE(condition)`: Checks a condition.
+- `EXPECT_FALSE(condition)`, `ASSERT_FALSE(condition)`: Checks condition is false.
+- `EXPECT_NE(val1, val2)`: Tests val1 != val2.
+
+Use `ASSERT_*` when the rest of the test cannot sensibly continue after failure (e.g., checking pointer is not null before dereferencing).
+
+### 6. Running a Subset of Tests
+
+To run only specific tests, use the `--gtest_filter` flag:
+
+```bash
+./my_tests --gtest_filter=FactorialTest.HandlesZeroInput
+```
+
+Wildcards `*` and `?` are supported. For example:
+
+```bash
+./my_tests --gtest_filter=FactorialTest.*
+```
+
+runs all tests in the `FactorialTest` suite.
+
+### 7. Handling Disabled Tests
+
+Prefix a test name or test suite name with `DISABLED_` to exclude it from normal runs:
+
+```cpp
+TEST(FactorialTest, DISABLED_BrokenTest) {
+  // This test will be compiled, but not run by default.
+}
+```
+
+Run disabled tests by adding the flag:
+
+```bash
+./my_tests --gtest_also_run_disabled_tests
+```
+
 ---
 
-## 4. Practical Examples
+## Practical Example
 
-### Example 1: Testing a Simple Function
+Here is a complete minimal example including main() to run the tests:
 
 ```cpp
 #include <gtest/gtest.h>
@@ -171,99 +209,66 @@ int Add(int a, int b) {
   return a + b;
 }
 
-TEST(AdditionTest, PositiveNumbers) {
+TEST(AddTest, HandlesPositiveInput) {
   EXPECT_EQ(Add(1, 2), 3);
-  EXPECT_EQ(Add(10, 20), 30);
+  EXPECT_EQ(Add(2, 2), 4);
 }
 
-TEST(AdditionTest, NegativeNumbers) {
-  EXPECT_EQ(Add(-1, -2), -3);
+class AddFixture : public testing::Test {
+ protected:
+  void SetUp() override {
+    base_ = 10;
+  }
+
+  int base_;
+};
+
+TEST_F(AddFixture, AddToBase) {
+  EXPECT_EQ(Add(base_, 5), 15);
+}
+
+int main(int argc, char** argv) {
+  testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
 }
 ```
 
-### Example 2: Using Assertions
-
-```cpp
-TEST(StringTest, Compare) {
-  std::string s = "hello";
-  EXPECT_EQ(s.size(), 5);
-  EXPECT_NE(s, "world");
-  EXPECT_TRUE(s == "hello");
-  ASSERT_FALSE(s.empty());
-}
-```
+Compile and run the executable to see tests executing with output.
 
 ---
 
-## 5. Troubleshooting & Tips
+## Troubleshooting & Tips
 
-### Common Issues
-
-- **Tests not running:** Ensure you call `RUN_ALL_TESTS()` in your `main()` and compile the test executable correctly.
-- **Linking errors:** Confirm your build links against the GoogleTest libraries.
-- **Assertion macro misuse:** Use correct macros (`EXPECT_*` vs `ASSERT_*`), and provide the correct number of parameters.
-
-### Best Practices
-
-- Keep tests **small and focused**: Each test should check one behavior.
-- Use **descriptive names**: Name your test suite and test clearly.
-- Use **ASSERT_** only when failure should stop the test.
-- Use **EXPECT_** to continue after failure to gather multiple failures.
-- Write tests **before bugs are encountered**: Test-driven development works well with GoogleTest.
-
-### Performance Considerations
-
-- GoogleTest is lightweight and fast for unit tests.
-- Organize tests with fixtures to share setup and speed up.
-
-### Next Steps
-
-- Learn to write **parameterized tests** for testing multiple inputs.
-- Explore GoogleMock to **mock dependencies** and test interactions.
-- Read [GoogleTest Primer](../docs/primer.md) for a deeper understanding.
-- Review [Writing Your First Test](../getting-started/first-test-run-validation/writing-your-first-test.md) for practical hands-on examples.
+- **Test Not Running?** Make sure your test functions use the `TEST` or `TEST_F` macros correctly and that your test files are linked.
+- **Assertion Not Showing Values?** Prefer `EXPECT_EQ` or other typed assertions over generic `EXPECT_TRUE` for clearer diagnostics.
+- **Tests Failing with Segfaults?** Check if you need to use `ASSERT_*` to verify pointers are not null before use.
+- **Skips Execution?** Check if `GTEST_SKIP()` is invoked in `SetUp()` or test bodies, which will skip tests gracefully.
+- **Custom main() Needed?** By default, linking with `gtest_main` provides a main(). Write a custom `main()` only if needed.
+- **Disable Only Temporarily:** Use the `DISABLED_` prefix only until you fix flaky or broken tests; do not commit permanently disabled tests.
 
 ---
 
-## 6. Summary
+## Next Steps
 
-You have learned the essentials of writing your first unit tests using GoogleTest. By following the steps in this guide, you can build reliable tests that help catch regressions and document expected behavior.
-
-For more advanced testing features and mocking strategies, proceed to the guides on GoogleMock and test fixtures.
-
----
-
-### Additional Resources
-- [GoogleTest Primer](../docs/primer.md)
-- [Writing Your First Test](../getting-started/first-test-run-validation/writing-your-first-test.md)
-- [gMock for Dummies](../docs/gmock_for_dummies.md)
-- [GoogleMock Cookbook](../docs/gmock_cook_book.md)
-- [Mocking Reference](../docs/reference/mocking.md)
+- Explore more complex test fixtures and parameterized tests in the [Test Fixtures & Parameterized Testing](../guides/core-test-workflows/structured-fixtures-parameterized-tests.md) guide.
+- Learn advanced assertion macros in [Advanced Assertions and Matchers](../guides/core-test-workflows/advanced-assertions-matchers.md).
+- Understand mocking for dependency isolation in [Basic Mocking with GoogleMock](../guides/getting-started/basic-mocking.md).
+- Consult the [GoogleTest Primer](../overview/about-googletest/what-is-googletest.md) for foundational concepts.
 
 ---
 
-### Example Test Execution Flow (Mermaid Diagram)
+## Useful Links
 
-```mermaid
-flowchart TD
-  Start([Start Writing Tests]) --> IncludeHeader[Include <gtest/gtest.h>]
-  IncludeHeader --> DefineTest[Define TEST or TEST_F]
-  DefineTest --> Build[Build Test Executable]
-  Build --> Run[Run the Test Executable]
-  Run -->|Tests Pass| Success[Success]
-  Run -->|Tests Fail| Fix[Fix Code or Test]
-  Fix --> DefineTest
-```
+- [GoogleTest Primer](../overview/about-googletest/what-is-googletest.md) - Overview and philosophy of GoogleTest
+- [Test Macros and Fixtures](../api-reference/core-test-api/test-macros-and-fixtures.md) - Detailed API for test definition macros
+- [Assertions Reference](../api-reference/assertions-and-matchers/basic-assertions.md) - List of assertion macros with usage
+- [Running Tests and Command Line Flags](../advanced.md#running-test-programs-advanced-options) - Customize test runs
+- [Getting Started with GoogleMock](../getting-started/first-test-usage/using-googlemock.md) - Integrate mocks in tests
 
 ---
 
-<Tip>
-Remember to always call `RUN_ALL_TESTS()` in your `main()` function to execute all the defined tests.
-</Tip>
-<Note>
-Use `EXPECT_*` assertions instead of `ASSERT_*` when you want the test to continue after a failure, enabling multiple verification points in one test.
-</Note>
-<Warning>
-Expectations in tests must be set before exercising the code under test. Setting expectations afterward leads to undefined behavior.
-</Warning>
+## Summary
+
+This page teaches you how to write your first GoogleTest unit tests using the `TEST` and `TEST_F` macros, compile your tests linking against GoogleTest libraries, and execute them with clear output results. It covers creating simple test cases, organizing tests with fixtures, and running tests via command-line with filters and flags. Practical troubleshooting guidance helps you overcome common initial issues. Once you’ve mastered this, you can advance to parameterized tests, more sophisticated assertions, and mocking frameworks.
+
 
