--- a/api-reference/mocking-api/setting-expectations-actions.mdx
+++ b/api-reference/mocking-api/setting-expectations-actions.mdx
@@ -1,384 +1,287 @@
 ---
-title: "Expectations, Actions, and Cardinalities"
-description: "Covers the APIs for specifying expected calls, argument matchers, actions, and call cardinality constraints. Explains the roles of EXPECT_CALL, ON_CALL, and the Cardinality abstraction for precisely controlling and verifying mock behavior. Provides usage patterns for flexible matching, default actions, and call sequencing."
+title: "Setting Expectations and Configuring Actions"
+description: "Outlines API and macros for ON_CALL, EXPECT_CALL, action configuration (Invoke, Return, etc.), cardinalities, and sequencing. Empowers users to precisely specify mock behavior, argument handling, and call order."
 ---
 
-# Expectations, Actions, and Cardinalities
+# Setting Expectations and Configuring Actions
 
-GoogleMock provides a rich set of APIs that let you precisely specify how your mock objects behave and how they are expected to be called. This documentation focuses on the core mechanisms to specify expectations, define default behaviors, and control call cardinalities for methods on mock objects.
-
----
-
-## Overview
-
-Mocking is about guiding and verifying interactions with mock objects in your tests. GoogleMock supports:
-
-- **Setting Expectations:** Use `EXPECT_CALL` to define that a method should be called with certain arguments and specify how many times.
-- **Defining Default Actions:** Use `ON_CALL` to specify the behavior for calls without strict expectations.
-- **Controlling Call Cardinality:** Through cardinalities, express how many times a call should occur.
-- **Sequencing Calls:** Order expectations with `InSequence` or `After` clauses.
-
-Think of expectations as commitments your test makes about interactions, and actions as how your mock responds when called.
-
+This documentation details how to precisely specify behavior, argument handling, and the ordering of calls in GoogleMock using the powerful `ON_CALL` and `EXPECT_CALL` macros, alongside action configuration techniques. It empowers you to control mocks with granular expectations, cardinalities, and call sequencing.
 
 ---
 
-## 1. Setting Expectations with `EXPECT_CALL`
+## 1. Overview of Setting Expectations
 
-`EXPECT_CALL` specifies that your mock object's method is expected to be called with particular arguments, possibly multiple times, and defines what happens when those calls occur.
+Setting expectations on mock methods is at the heart of interaction-based testing with GoogleMock. Expectations allow you to declare which methods of your mock objects you expect to be called, the arguments they should receive, how many times they will be called, and what they should return or do when invoked.
+
+### Key concepts:
+
+- **ON_CALL** sets default behaviors without enforcing any call count expectations.
+- **EXPECT_CALL** sets both behavior and strict expectations for calls (arguments, call counts, call order).
+- You combine **matchers** with **actions** to specify what arguments are allowed and what happens when the mock method is called.
+
+Always set expectations before exercising the mock in your tests to ensure correct verification.
+
+---
+
+## 2. Using `ON_CALL`: Specifying Default Behaviors Without Expectations
+
+### Purpose
+`ON_CALL` configures how mocked methods behave *when called* but does *not* expect these calls to occur. This distinction keeps your tests resilient, avoiding over-constraining the behavior when it's not relevant to the verification.
 
 ### Syntax
-
 ```cpp
-EXPECT_CALL(mock_object, Method(matchers...))
-    .With(multi_argument_matcher)    // Optional, must be first
-    .Times(cardinality)              // Optional, at most once
-    .InSequence(sequences...)        // Optional, any number of times
-    .After(expectations...)          // Optional, any number of times
-    .WillOnce(action)                // Optional, any number of times
-    .WillRepeatedly(action)          // Optional, at most once
-    .RetiresOnSaturation();          // Optional, at most once, must be last
+ON_CALL(mock_object, Method(matchers))
+    [.With(multi_argument_matcher)]
+    .WillByDefault(action);
 ```
 
-Here:
-
-- **`matchers...`**: Per-argument matchers or `_` for wildcards. If omitted (and method is not overloaded) matches any args.
-- **`With()`**: Applies a matcher to the entire argument tuple.
-- **`Times()`**: Specifies expected call count.
-- **`InSequence()`**: Enforces call order within one or more sequences.
-- **`After()`**: Specifies prerequisite expectations that must be satisfied before this call is matched.
-- **`WillOnce()`** and **`WillRepeatedly()`**: Define the behavior on matching calls.
-
-
-### Important Details
-
-- `.With()` can appear at most once and must be the first clause.
-- `.Times()` can appear at most once.
-- `.WillOnce()` can appear multiple times; the nth matching call runs the nth action.
-- `.WillRepeatedly()` can appear once; it applies for all calls after the `WillOnce()` actions are exhausted.
-- `.RetiresOnSaturation()` causes the expectation to become inactive after being saturated (used up).
-
+- `.With()`  (optional) specifies a matcher over the entire argument tuple to filter calls.
+- `.WillByDefault()`  (required) specifies the action to take when the call matches.
 
 ### Example
-
 ```cpp
-using ::testing::_;      // Matches anything
-using ::testing::Lt;     // Less than matcher
-using ::testing::Return; // Returns a value
+using ::testing::Return;
+using ::testing::_;
+
+class MockFoo {
+ public:
+  MOCK_METHOD(int, GetValue, (int), (override));
+};
+
+MockFoo mock;
+ON_CALL(mock, GetValue(_)).WillByDefault(Return(42));
+```
+Here, any call to `mock.GetValue()` returns `42` unless overridden by an `EXPECT_CALL` in the test.
+
+### Best Practices
+- Use in test fixture constructors or setup to define common default behaviors.
+- Avoid using `ON_CALL` to enforce expectations on call counts — use `EXPECT_CALL` instead.
+- When you want to silence warnings from uninteresting calls, `ON_CALL` combined with `NiceMock` can help.
+
+---
+
+## 3. Using `EXPECT_CALL`: Defining Precise Expectations
+
+### Purpose
+`EXPECT_CALL` not only defines the mock method’s behavior but also asserts that the method should be called according to specified constraints.
+
+### Syntax
+```cpp
+EXPECT_CALL(mock_object, Method(matchers))
+    [.With(multi_argument_matcher)]  
+    [.Times(cardinality)]
+    [.InSequence(sequences...)]
+    [.After(expectations...)]
+    [.WillOnce(action)...]
+    [.WillRepeatedly(action)]
+    [.RetiresOnSaturation()];
+```
+
+### Clause Details
+
+- `.With(multi_argument_matcher)`: Match the entire argument tuple with a composite matcher.
+
+- `.Times(cardinality)`: Specify how many times the call is expected:
+  - `AnyNumber()`: zero or more times
+  - `AtLeast(n)`, `AtMost(n)`, `Between(m, n)`, `Exactly(n)` (or `n`)
+
+- `.InSequence(sequences...)`: Require that calls matching this expectation occur within specified sequences, enforcing ordering.
+
+- `.After(expectations...)`: Specify that this expectation may only be matched *after* the listed expectations are satisfied, enabling arbitrary partial ordering.
+
+- `.WillOnce(action)`: Define what happens on the next invocation matching this expectation, can be chained multiple times to specify sequential behaviors.
+
+- `.WillRepeatedly(action)`: Define what happens after all `WillOnce()` actions are consumed.
+
+- `.RetiresOnSaturation()`: Automatically retire the expectation once the upper bound of calls has been reached.
+
+### Examples
+```cpp
+using ::testing::_;
+using ::testing::Return;
+using ::testing::AtLeast;
 using ::testing::Sequence;
 
 Sequence s1;
 
-EXPECT_CALL(my_mock, SetPosition(_, _))
-    .With(Lt())               // The first arg < second arg
-    .Times(3)                // Expect 3 calls
-    .InSequence(s1)          // Must be called in sequence s1
-    .WillOnce(Return(true))  // First call returns true
-    .WillRepeatedly(Return(false)); // Subsequent calls return false
-```
-
-This expects three calls to `SetPosition`, where the first argument is less than the second. The first call returns `true`, the rest `false`. All calls must respect the defined sequence `s1`.
-
-
----
-
-## 2. Defining Default Behaviors with `ON_CALL`
-
-While `EXPECT_CALL` asserts that a call is expected, `ON_CALL` lets you define what should happen if the call occurs, without setting an expectation that it must happen.
-
-### Syntax
-
-```cpp
-ON_CALL(mock_object, Method(matchers...))
-    .With(multi_argument_matcher)  // Optional, at most once
-    .WillByDefault(action);        // Mandatory
-```
-
-- As with `EXPECT_CALL`, per-argument matchers or `_` for wildcards; omitted means matches any arguments for non-overloaded methods.
-- `.With()` is optional.
-- `.WillByDefault()` must be used exactly once per `ON_CALL`.
-
-
-### Behavior
-
-- Defines the default action taken when the mock method is called with matching arguments but no matching `EXPECT_CALL` exists.
-- When multiple `ON_CALL`s match, the one most recently defined (last in order) that matches is used.
-
-
-### Example
-
-```cpp
-using ::testing::Return;
-...
-ON_CALL(my_mock, Greet())
-    .WillByDefault(Return(std::string("hello")));
-```
-
-This makes `Greet()` return "hello" by default, unless overridden by an `EXPECT_CALL` with its own actions.
-
-
----
-
-## 3. Matchers: Specifying Arguments
-
-Matchers describe the criteria by which arguments are matched. Use the wildcard matcher `_` to accept any value for an argument.
-
-**Single-argument matchers:**
-- `Eq(value)`: exact match
-- `Ge(value)`, `Lt(value)`, `Ne(value)` etc.: comparison matchers
-
-**Multi-argument matchers:**
-- Use `.With()` with a matcher on the tuple of arguments to specify conditions involving multiple arguments at once.
-
-**Example:**
-
-```cpp
-EXPECT_CALL(foo, Method(_, _)).With(Lt());  // the first arg < second arg
-```
-
-See the [Matchers Reference](reference/matchers.md) for the full list.
-
-
----
-
-## 4. Cardinalities: Controlling Call Counts
-
-Cardinality objects specify how many times an expectation is expected to match.
-
-### Built-in Cardinalities
-
-| Cardinality           | Description                                                |
-|----------------------|------------------------------------------------------------|
-| `AnyNumber()`         | Call can occur any number of times (zero or more).          |
-| `AtLeast(n)`          | Call is expected at least n times.                          |
-| `AtMost(n)`           | Call is expected at most n times.                           |
-| `Between(m, n)`       | Call is expected between m and n times (inclusive).        |
-| `Exactly(n)` or `n`   | Call is expected exactly n times; 0 means never called.     |
-
-### Inference Rules
-
-If `Times()` is omitted, GoogleMock infers cardinality based on presence of `.WillOnce()`/`.WillRepeatedly()`:
-
-- No `WillOnce` or `WillRepeatedly`: inferred `Times(1)`
-- `n` `WillOnce`s and no `WillRepeatedly`: inferred `Times(n)`
-- `n` `WillOnce`s and one `WillRepeatedly`: inferred `Times(AtLeast(n))`
-
-### Example
-
-```cpp
-EXPECT_CALL(foo, Bar(_)).Times(AtLeast(2));
-```
-
-This expects `Bar` to be called two or more times.
-
-
----
-
-## 5. Sequencing and Ordering
-
-### `InSequence`
-
-Enforce that a set of expectations must be matched in the order they're declared.
-
-```cpp
-using ::testing::InSequence;
-{
-  InSequence seq;  // All expectations inside this block are ordered.
-  EXPECT_CALL(foo, A());  
-  EXPECT_CALL(foo, B());  
-  EXPECT_CALL(foo, C());  
-}
-```
-
-### `Sequence` Objects
-
-For more complex ordering, you can group expectations into `Sequence`s explicitly.
-
-```cpp
-Sequence s1, s2;
-EXPECT_CALL(foo, A()).InSequence(s1, s2);
-EXPECT_CALL(bar, B()).InSequence(s1);
-EXPECT_CALL(bar, C()).InSequence(s2);
-```
-
-This defines a partial order where `A` happens before both `B` and `C`, and `C` happens before later calls in `s2`.
-
-### `After`
-
-For arbitrary ordering constraints in the call graph, `After()` can specify that one expectation must only be matched after other expectations have been met.
-
-```cpp
-Expectation e1 = EXPECT_CALL(foo, X());
-ExpectationSet es;
-es += EXPECT_CALL(bar, Y());
-es += EXPECT_CALL(bar, Z());
-EXPECT_CALL(foo, W()).After(e1, es);
-```
-
-This expects `W()` only after `X()`, `Y()`, and `Z()` have all occurred.
-
-
----
-
-## 6. Retiring Expectations: `RetiresOnSaturation`
-
-An expectation by default remains active even after it's saturated (fulfilled the expected number of calls). To make it become inactive after it is saturated, use:
-
-```cpp
-EXPECT_CALL(foo, Bar())
-    .Times(3)
-    .RetiresOnSaturation();
-```
-
-This will cause the expectation to stop matching after 3 calls, allowing other matching expectations to take over.
-
-
----
-
-## 7. Handling Uninteresting and Unexpected Calls
-
-- Uninteresting calls are those without any `EXPECT_CALL` statement matching them. They invoke the default action if an `ON_CALL` matches, or the built-in default behavior otherwise.
-- Unexpected calls have `EXPECT_CALL`s for the method, but arguments don't match any expectation. These are errors.
-
-### Behavior Modes
-
-Mock objects can behave differently on uninteresting calls:
-
-| Mock Type   | Uninteresting Calls Behavior        |
-|-------------|-----------------------------------|
-| NaggyMock   | Emits warnings (default behavior) |
-| NiceMock    | Ignores with no warnings           |
-| StrictMock  | Treats as test failures           |
-
-Use the appropriate mock wrapper (`NiceMock<T>`, `StrictMock<T>`) per your testing philosophy.
-
-
----
-
-## 8. Mock Verification and Clearing
-
-GoogleMock verifies expectations automatically when mock objects are destroyed.
-
-Alternatively, verify and clear expectations earlier:
-
-```cpp
-bool success = Mock::VerifyAndClearExpectations(&mock_object);
-```
-This clears expectations and returns true if all expectations were met.
-
-To also clear default actions:
-
-```cpp
-bool success = Mock::VerifyAndClear(&mock_object);
-```
-Use these to detect unsatisfied expectations before object destruction, useful in some test scenarios.
-
-To prevent leak errors (unverified mocks), you can suppress verification for a mock:
-
-```cpp
-Mock::AllowLeak(&mock_object);
-```
-
-
----
-
-## 9. Practical Tips and Best Practices
-
-- **Set expectations before exercising mocks.** Setting expectations after calling the mock is undefined behavior.
-
-- **Use `ON_CALL` for default behavior, `EXPECT_CALL` for verifying interactions.** Avoid overusing `EXPECT_CALL` just to suppress warnings.
-
-- **Use wildcards (`_`) when argument value details are irrelevant.**
-
-- **Use sequences or `After` to enforce order only when relevant.**
-
-- **Use `RetiresOnSaturation` for expectations that should deactivate after full use.**
-
-- **Remember that later `EXPECT_CALL`s override earlier ones.** Put more specific expectations last.
-
-- **Run tests with `--gmock_verbose=info` to get rich debugging output on mock calls.**
-
-
----
-
-## 10. Examples
-
-### Basic Mock Setup
-
-```cpp
-class MockFoo {
- public:
-  MOCK_METHOD(int, GetSize, (), (const, override));
-};
-
-MockFoo foo;
-
-ON_CALL(foo, GetSize())
-    .WillByDefault(Return(10));
-
-EXPECT_CALL(foo, GetSize())
+EXPECT_CALL(mock, Foo(5))
     .Times(2)
-    .WillOnce(Return(5))
-    .WillRepeatedly(Return(7));
+    .WillOnce(Return(10))
+    .WillOnce(Return(20));
 
-// First call returns 5
-int size1 = foo.GetSize();  // 5
-// Second call returns 7
-int size2 = foo.GetSize();  // 7
-// Subsequent calls return 7
-int size3 = foo.GetSize();  // 7
+EXPECT_CALL(mock, Bar(_))
+    .Times(AtLeast(1))
+    .InSequence(s1)
+    .WillRepeatedly(Return(true));
+
+Expectation e = EXPECT_CALL(mock, Init());
+EXPECT_CALL(mock, Cleanup()).After(e);
 ```
 
-### Using `InSequence` to Enforce Order
+### Ordering Expectations
+Ensuring mocks are called in the correct order prevents subtle bugs.
 
+- Use `InSequence` for linear sequences.
+- Use `.After()` with other expectations/expectation sets to describe complex DAGs.
+
+### Cardinalities and Call Limits
+- Omit `.Times()` to let GoogleMock infer default:
+  - If no Will clauses, default is once.
+  - If N `WillOnce()`, infertimes N.
+  - If any `WillRepeatedly()`, infer `AtLeast(N)`.
+
+- Setting `.Times(0)` prohibits any call to the method.
+
+### Use `.RetiresOnSaturation()` to make expectations non-sticky
+Expectations are sticky by default, meaning they remain active even after saturation. Use `.RetiresOnSaturation()` to auto-retire when saturated to allow subsequent expectations to be used.
+
+---
+
+## 4. Configuring Actions: Defining Mocked Method Behavior
+
+The behavior of mock functions when they are invoked is controlled by actions.
+
+### Built-in actions include:
+- `Return(value)`: returns a copy of *value*.
+- `ReturnRef(reference)`: returns a reference to an existing object.
+- `ReturnPointee(pointer)`: returns the dereferenced value at call time.
+- `DoAll(action1, action2, ..., actionN)`: performs multiple actions in order, returning the last’s value.
+- `SetArgPointee<N>(value)`: sets the pointed-to value of the Nth argument.
+- `SetArrayArgument<N>(first, last)`: copies an array into the Nth argument pointer.
+- `Invoke(function/functor/lambda)`: calls the specified callable with the arguments.
+- `InvokeWithoutArgs(function)`: calls a zero-argument callable ignoring mock arguments.
+- `InvokeArgument<N>(args...)`: invokes the Nth argument itself, which must be a callable.
+- `IgnoreResult(action)`: ignores an action’s return value, useful for `void` mock methods.
+
+### Defining Custom Actions
+- You can define lambdas, functors, or classes with call operators compatible with mocked method signatures.
+- Parameterized and monomorphic/polymorphic actions can be implemented for versatile reuse.
+
+### Practical Tips
+- Use `ReturnPointee` to safely return live-updated values.
+- Combine side effects with `DoAll()` if the mocked function modifies arguments and returns a value.
+- Use `Invoke` to call existing functions or lambdas.
+- To call a parent class’s concrete method, use `EXPECT_CALL(mock, Method(args)) .WillOnce([&mock](...) { return mock.Class::Method(...); })` to avoid infinite recursion.
+
+---
+
+## 5. Controlling Call Order: Cardinalities and Sequencing
+
+### Cardinalities
+They specify how often a mocked method is expected:
+- Flexible granularities let tests express exact or fuzzy call counts.
+- Use built-in cardinalities like `AnyNumber()`, `AtLeast()`, `AtMost()`, `Between()`, and `Exactly()`.
+
+### Sequences
+Control call ordering with:
+- `InSequence`: Enforces linear order inside a scope.
+- `.InSequence()` clause: Associate an expectation with a user-defined sequence.
+- `.After()` clause: Enforce ordering relative to one or more earlier expectations, enabling arbitrary DAG ordering.
+
+### Sticky behavior
+Expectations remain active by default even when saturated to prevent premature failure. Use `.RetiresOnSaturation()` to change this behavior.
+
+---
+
+## 6. Advanced Behavior and Best Practices
+
+### Prioritizing expectations
+- GoogleMock searches expectations in reverse order; later expectations override earlier ones. Put more general expectations before specific ones.
+
+### Ignoring arguments
+- For uninteresting or complex arguments, omit parameter lists or use `_` matcher.
+- When matching multiple arguments as a tuple, use `.With()` with tuple matchers.
+
+### Uninteresting vs Unexpected calls
+- **Uninteresting**: No expectation, no error but warning issued (unless mock is nice).
+- **Unexpected**: Calls don't match any expectation, always an error.
+- Control the behavior with `NiceMock`, `NaggyMock` (default), and `StrictMock` wrappers.
+
+### Defining expectations that don’t specify parameters
+- Allowed only for non-overloaded methods.
+- Use with care, as omitting argument matchers ignores argument verification.
+
+### Combining actions
+- Use `DoAll()` to chain multiple actions (e.g., set output arguments + return a value).
+
+### Tips for move-only types
+- Mock methods can accept and return move-only types (like `std::unique_ptr`).
+- Use lambdas or functors to return new instances per call.
+
+---
+
+## 7. Troubleshooting Common Issues
+
+### Missing or misordered expectations
+If a call doesn’t match any `EXPECT_CALL`, GoogleMock will report an unexpected call.
+
+### Too many or too few calls
+Failure messages will detail call count mismatches, including whether a call was over or under the expected number.
+
+### Over-specified expectations
+To avoid brittle tests due to too-specific expectations:
+- Use `ON_CALL` for defaults.
+- Use `EXPECT_CALL` only when verifying critical interactions.
+- Don’t set more expectations than necessary.
+
+### Uninteresting call warnings
+- Suppressed by using `NiceMock`.
+- Increased to errors by using `StrictMock`.
+
+---
+
+## 8. Summary
+
+GoogleMock’s API for setting expectations and configuring actions lets you express how mocks behave and verify call patterns precisely. Leveraging `ON_CALL` for common default behaviors, and `EXPECT_CALL` for strict verification, helps produce robust and maintainable tests. Understanding cardinalities, actions, and call sequencing completes the powerful toolkit for interaction-based testing.
+
+---
+
+## 9. Useful Code Examples
+
+### Setting default action with ON_CALL
 ```cpp
-using ::testing::InSequence;
-
-InSequence s;
-
-EXPECT_CALL(foo, DoA());
-EXPECT_CALL(foo, DoB());
-
-foo.DoA();  // Ok
-foo.DoB();  // Ok
-foo.DoA();  // Error: out-of-order call
+ON_CALL(mock, Foo(_))
+    .WillByDefault(Return(123));  // Returns 123 by default
 ```
 
-
-### Using `After` to Define Partial Order
-
+### Expecting calls with specific arguments
 ```cpp
-Expectation init = EXPECT_CALL(foo, Initialize());
-EXPECT_CALL(foo, Run()).After(init);
-
-foo.Run();       // Error: must follow Initialize()
-foo.Initialize();
-foo.Run();       // Ok
+EXPECT_CALL(mock, Bar(5))
+    .Times(2)
+    .WillOnce(Return(true))
+    .WillOnce(Return(false));
 ```
 
+### Enforcing call order
+```cpp
+Sequence s;
+EXPECT_CALL(mock, Init()).InSequence(s);
+EXPECT_CALL(mock, Process()).InSequence(s);
+// Init must be called before Process
+```
+
+### Mocking side effects and return values
+```cpp
+EXPECT_CALL(mock, Mutate(_, _))
+    .WillOnce(DoAll(SetArgPointee<1>(42), Return(true)));
+```
+
+### Calling real method inside mock
+```cpp
+EXPECT_CALL(mock, ConcreteMethod())
+    .WillOnce([&mock]() { return mock.BaseClass::ConcreteMethod(); });
+```
 
 ---
 
-## Additional Resources
+## 10. See Also
 
-- [GoogleMock Cheat Sheet](docs/gmock_cheat_sheet.md) for quick syntax and patterns.
-- [Mocking Reference](docs/reference/mocking.md) — complete API details.
-- [gMock Cookbook](docs/gmock_cook_book.md) — recipes and best practices.
-- [GoogleMock for Dummies](docs/gmock_for_dummies.md) — conceptual introduction.
-
-
----
-
-This page covers APIs to precisely specify expected mock calls, argument matching, action definitions, call count constraints, and ordered or sequenced call patterns, providing flexible and powerful control over mock behavior in tests.
-
-
----
-
-## Related Navigation
-
-- See the [Mock Object and Method Creation](mock-creation.md) page for details on defining mocks.
-- Explore [Matchers](matchers.md) and [Actions](actions.md) references for building complex argument and response logic.
-- For managing mock lifecycles and verifying expectations, see [Mock Object Behavior Modes](mock-behavior-modes.md).
-
+- [GoogleMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
+- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html)
+- [Matchers Reference](../assertions-and-matchers/using-matchers)
+- [Actions Reference](../mocking-api/actions)
+- [Core Concepts and Terminology](../../overview/core-concepts/core-concepts-terminology)
+- [Defining Mocks and Methods](../mocking-api/defining-mocks-and-methods)
+- [Strict, Nice, and Naggy Mocks](../mocking-api/strict-nice-mocks)
 
 ---
